@@ -1,3 +1,4 @@
 /design
 /uploads
 DS_Store
+/tmp
